@@ -29,6 +29,9 @@
 
 	svycontrast() gets a new argument add=TRUE to keep the old coefficients as well
 
+	twophase() can now take strata= arguments that are character, not just factor
+	or numeric. (for Pam Shaw)
+
 
 4.0	Some (and eventually nearly all) functions now return influence functions when
 	called with a survey.design2 object and the influence=TRUE option.  These allow
